--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "bootstrap": "^5.1.3",
+    "framer-motion": "^6.2.8",
     "moralis": "^1.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.3.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.9",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
