--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@uiw/react-md-editor": "^3.10.2",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.8",
+    "ipfs-http-client": "^56.0.1",
     "moralis": "^1.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-moralis": "^1.3.2",
     "react-responsive-masonry": "^2.1.4",
     "react-router-dom": "^6.2.2",
