--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "web3.storage": "^3.5.7"
   },
   "scripts": {
     "start": "react-scripts start",
